Fix drawer and aside menu overflow

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -1,4 +1,4 @@
 
-.bg-brand-grandient {
+.bg-brand-gradient {
   @apply bg-gradient-to-br from-cyan-900 to-cyan-800;
 }
